test/Fail/Issue1484.err
Issue1484.agda:40,14-14
Issue1484.agda:40,14: expected sequence of bound identifiers, not absurd pattern
}<ERROR>
}

-- Error WAS:
-- Internal p...
